# ml-engineering-zoomcamp

./: .gitignore  README.md  requirements.txt
01-ml-intro/: 01-intro.ipynb  README.md
02-regression/: 02-regression.ipynb  README.md
03-classification/: 03-classification.ipynb
05-deployment/: predict.py  pyproject.toml  question3.py
06-trees/: 06-trees.ipynb
exercises/: 04-evaluation.ipynb
exercises/05-deployment/: Dockerfile  ping.py  workshop-uv-fastapi.ipynb
exercises/08-deep-learning/: 08-deep-learning_v2.ipynb
exercises/09-serverless/: aws-lambda-rie  lambda_function.py
exercises/10-kubernetes/: 10-kubernetes.ipynb
homework/: 01-intro.ipynb  02-regression.ipynb  03-classification.ipynb  04-evaluation.ipynb  06-trees.ipynb
homework/05/: main.py  marketing.py  ping.py  predict.py  question3.py
homework/08-deep-learning/: 08-deep-learning.ipynb
homework/09-serverless/: 09-serverless.ipynb  Dockerfile  test.py
homework/10-kubernetes/: q6_test_hw10q8.py
midterm_project/app/: Dockerfile  administration.py  fly.toml  predict.py  test-fly.io-deployment.py
midterm_project/models/: catboost_model.pkl  ols_model.pkl  rf_model.pkl
midterm_project/python/: 01-process-data.ipynb  02-eda.ipynb  03-feature-engineering.ipynb  04.1-lr-modeling.ipynb  04.2-rf-modeling.ipynb
ml_project/: README.md
ml_project/app/: patientstay.json  pipeline.py  pyproject.toml  rebuild_pipeline.py
ml_project/python/: 01-process-data.ipynb  04.3-boosted-modeling.ipynb  05-evaluation.ipynb  06-create-pipeline.ipynb  07-test-pipeline.ipynb
(+4 files in other folders)
