[project]
name = "ml-engineering-zoomcamp"
version = "0.1.0"
description = "ML Engineering Zoomcamp homework 5 (October 2025)"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.120.0",
    "scikit-learn==1.6.1",
    "uvicorn>=0.38.0",
]

[dependency-groups]
dev = [
    "requests>=2.32.5",
]
